@@ -6,6 +6,7 @@ Gameplay:
 
 UX:
 * Unused item properites were hidden in the editor
+* Fixed a bug where certain shortcuts didn't work in the editor after leaving playtest
 
 Rend 0.4.0 changelog:
 
